--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="landing_bg"> </div>
     <h1 class="landing_title"> I'm Ania </h1>
     <h2 class="landing_subtitle"> Project Manager </h2>
-    <a href="#" class="landing_button"> wanna know more? </a>
+    <a href="#about" class="landing_button"> wanna know more? </a>
   </section>
   <section class="about" id="about">
     <div class="about_content">
